--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dotenv": "^7.0.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.8.4",
+    "react-recaptcha": "^2.3.10",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
